feat(mpv): `ctrl+m` to toggle mouse input, useful when watching anime

--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -27,6 +27,10 @@ Shift+DOWN  seek -85
 { add speed -1.0
 } add speed 1.0
 
+# Use `ctrl+m` to toggle mouse input, and make the mouse
+# completely invisible, useful when watching a movie/anime
+ctrl+m cycle input-cursor
+
 # Rotate video
 ctrl+r cycle_values video-rotate 90 180 270 0
 
