docs(mpv): improve comment on `input.conf`

--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -87,16 +87,21 @@ CTRL+0 no-osd change-list glsl-shaders clr ""; show-text "GLSL shaders cleared"
 ## Uosc context menu
 # uosc uses input.conf config
 #
-# yes, they start with `#`, if you don't
-# want to assign keybind, just like a comment
+# They start with `#` if you don't want to assign
+# a keybind, just like a comment. Then followed by #!
 
-# Remove some of the unnecessary items
-# 1. Delete file, just why
-# 2. Screenshot, just use `s`, `S` or `<C-s>`
+# Open uosc/menu instead of the default select.lua
+# with a keybind
 MENU    script-binding uosc/menu
 ctrl+p  script-binding uosc/menu
 g-m     script-binding uosc/menu
 
+# Remove some of the unnecessary items and
+# use uosc menu instead of the default select.lua
+# (mpv's new select ui thing added 0.40.0) 
+# 
+# So for example here, `g-s` will open uosc's
+# ui for selecting sub instead of the select.lua's one
 g-s  script-binding uosc/subtitles             #! Subtitles
 g-a  script-binding uosc/audio                 #! Audio tracks
 g-v  script-binding uosc/video                 #! Video tracks
