feat(mpv): add `strip` option to cycle ass override using `u`

--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -34,6 +34,14 @@ ctrl+m cycle input-cursor
 # Rotate video
 ctrl+r cycle_values video-rotate 90 180 270 0
 
+# Add "strip" option to `u` keybind
+#
+# Sometimes the "ass" subtitle is just straight up ass.
+# It's just a basic `srt` sub with an ugly/weird font slapped
+# into the sub. So adding a `strip` option (remove all
+# ass style and use mpv's `--sub-*` option) will be helpful.
+u cycle-values sub-ass-override "force" "scale" "strip"
+
 ## Disable default
 # Disable scroll wheel keybind except
 # the one with ctrl (change video zoom)
