feat(tmux): use shift alt left/right to move window
Ok, so to summarize
nvim:
Alt+h/l        -> navigate between tab
Ctrl+Alt+h/l   -> move tab

tmux:
Shift+Alt+h/l  -> navigate between window
Shift+Alt+arrow-> move window
Ctrl+Alt+arrow -> resize pane (not the best but I rarely used it)

hybrid:
Ctrl+h/l       -> navigate between nvim's window and tmux's pane
                  (note: they're the same thing with different name)

Is it a mess? I don't know, but if it works, it works ig.

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -6,11 +6,15 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 set -gq allow-passthrough on
 set -g visual-activity off
 
-# Shift alt vim keys to switch windows
+# Shift alt h/l to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
 
-# Resize pane using ctrl arrow key
+# Shift alt left/right to move windows
+bind -n M-S-Left swap-window -t -1\; select-window -t -1
+bind -n M-S-Right swap-window -t +1\; select-window -t +1
+
+# Ctrl arrow key to resize pane
 bind -n C-M-Left  resize-pane -L 1
 bind -n C-M-Right resize-pane -R 1
 bind -n C-M-Up    resize-pane -U 1
