feat(mpv): set max width window to be 90% too

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -39,10 +39,9 @@ osd-bar=no
 # Make osd text smaller
 osd-font-size=30
 
-# Make sure that mpv spawn a new window larger
-# than the screen. Putting 90% as the height
-# to account for the taskbar
-autofit-larger=100%x90%
+# Make sure that mpv don't spawn a new
+# window larger than the screen.
+autofit-larger=90%x90%
 
 ## Subtitle
 # Do note that these setting only applies to
