refactor(mpv): remove explicitly set to use yt-dlp
I think the default are yt-dlp, and I also change the raw option to
match to what I have in `yt-dlp.conf`

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -83,12 +83,9 @@ deband=no
 write-filename-in-watch-later-config=yes
 
 ## yt-dlp
-# Use yt-dlp
-script-opts-append=ytdl_hook-ytdl_path=yt-dlp
-
 # Include english, indonesian, and japanese
 # subtitle (both auto and non-auto)
-ytdl-raw-options='sub-langs="^en.*,id,ja",write-subs=,write-auto-subs='
+ytdl-raw-options='sub-langs="en.*,id,ja",write-subs=,write-auto-subs='
 
 ## Auto-profile
 # Loop if its a gif
