feat(mpv): disable top bar control

--- a/dot_config/mpv/script-opts/uosc.conf
+++ b/dot_config/mpv/script-opts/uosc.conf
@@ -13,6 +13,10 @@ time_precision=2
 # under `cursor-autohide` config, defaults to `1000` (ms)
 autohide=yes
 
+# Disable top bar control, the minimize-maximize-close one
+# as we can use the DE's control
+top_bar_controls=no
+
 # Made some changes to the control from the default control
 # button above the timeline bar.
 #
