feat(mpv): always show top bar on audio file

--- a/dot_config/mpv/script-opts/uosc.conf
+++ b/dot_config/mpv/script-opts/uosc.conf
@@ -17,6 +17,10 @@ autohide=yes
 # as we can use the DE's control
 top_bar_controls=no
 
+# Always show top bar (media title and chapter if exist) on
+# audio file
+top_bar_persistency=audio
+
 # Made some changes to the control from the default control
 # button above the timeline bar.
 #
