feat(kitty): disable confirm prompt when exit

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -7,3 +7,6 @@ font_size 14.0
 
 # Window Padding (all sides)
 window_padding_width 5
+
+# Disable "Are you sure want to close this OS window" prompt
+confirm_os_window_close 0
