feat(mpv): use `C` to toggle audio visualizer on audio file

--- a/dot_config/mpv/input.conf
+++ b/dot_config/mpv/input.conf
@@ -76,6 +76,9 @@ a script-binding seek_to/toggle-seeker
 # 'c' to open videoclip menu
 c script-binding videoclip/videoclip-menu-open
 
+# 'C' to cycle audio visualizer
+C cycle-values script-opts "visualizer-name=off" "visualizer-name=showcqtbar"
+
 ## Shaders
 # Anime4k Shaders
 # Optimized shaders for higher-end GPU
