feat(yt-dlp): download opus audio with best bitrate instead of mp3
Because mp3 sucks

--- a/dot_config/yt-dlp.conf
+++ b/dot_config/yt-dlp.conf
@@ -25,4 +25,4 @@
 --alias videoytsub "--no-embed-subs --write-subs --sub-format=srv3"
 
 # Audio only alias
---alias audio "-x --audio-format mp3 --audio-quality 320k"
+--alias audio "-x --audio-format opus --audio-quality 0"
