feat: use mpv directory inside `Pictures` for screenshot

--- a/mpv.conf
+++ b/mpv.conf
@@ -62,15 +62,16 @@ sub-margin-y=50
 # Use .png file format
 screenshot-format=png
 
-# Put screenshot on the default directory and name it
-# the same as the default Spectacle (KDE) screenshot:
-# Screenshot_YYYYMMDD_HHMMSS.png
+# Put screenshot on it's own directory and name it
+# the same as the default Snipping Tool screenshot:
+# Screenshot YYYY-MM-DD HHMMSS.png
 #
-# I also make sure to "tag" (user.xdg.tags) it as `mpv`
-# for the screenshot file so that it's somewhat organized,
-# see input.conf and screenshot.sh
-screenshot-directory="~/pictures/screenshots"
-screenshot-template="Screenshot_%tY%tm%td_%tH%tM%tS"
+# You can also put it in the default Screenshots
+# directory like Snipping tool by uncommenting it:
+# screenshot-directory="~/Pictures/Screenshots"
+
+screenshot-directory="~/Pictures/mpv"
+screenshot-template="Screenshot %tY-%tm-%td %tH%tM%tS"
 
 ## Deband
 deband=no
