docs(mpv): update file reference

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -73,7 +73,7 @@ screenshot-format=png
 #
 # I also make sure to "tag" (user.xdg.tags) it as `mpv`
 # for the screenshot file so that it's somewhat organized,
-# see input.conf and screenshot.sh
+# see scripts/screenshot.lua
 screenshot-directory="~/pictures/screenshots"
 screenshot-template="Screenshot_%tY%tm%td_%tH%tM%tS"
 
