docs(mpv): add comments to an option

--- a/mpv.conf
+++ b/mpv.conf
@@ -12,6 +12,9 @@ profile=high-quality
 # Also it's needed for vulkan video decoding below
 vo=gpu-next
 
+# Deband
+deband=no
+
 ## Behaviour
 # Use precise seek whenever possible
 hr-seek=yes
@@ -73,9 +76,8 @@ screenshot-format=png
 screenshot-directory="~/Pictures/mpv"
 screenshot-template="Screenshot %tY-%tm-%td %tH%tM%tS"
 
-## Deband
-deband=no
-
+## General
+# Save filename in watch later, useful for g-w
 write-filename-in-watch-later-config=yes
 
 ## yt-dlp
