docs(mpv): add comments to an option

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -17,6 +17,9 @@ gpu-api=vulkan
 hwdec=vulkan
 gpu-context=waylandvk
 
+# Deband
+deband=no
+
 ## Behaviour
 # Use precise seek whenever possible
 hr-seek=yes
@@ -77,9 +80,8 @@ screenshot-format=png
 screenshot-directory="~/pictures/screenshots"
 screenshot-template="Screenshot_%tY%tm%td_%tH%tM%tS"
 
-## Deband
-deband=no
-
+## General
+# Save filename in watch later, useful for g-w
 write-filename-in-watch-later-config=yes
 
 ## yt-dlp
