--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -57,12 +57,11 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'omerxx/tmux-sessionx'
 
-# Set the right status to be the current date and time
-set -g status-right "#[fg=cyan]%I:%M %p %d %b %Y "
 # Set global fg and bg
 set -g status-style fg=black,bg=default
-# if prefix is active
-set -g status-left "#{?client_prefix,#[bg=green],#[bg=cyan]}#[fg=black] #{session_name} "
+# Set the right status to be the session name
+# with cyan bg and green bg if the prefix is active
+set -g status-right "#{?client_prefix,#[bg=green],#[bg=cyan]}#[fg=black] #{session_name} "
 # Set the fg to be white for the current window
 set -g window-status-current-style fg=brightgreen
 # Set the bg to yellow and fg to black if
