feat(tmux): unbind prefix+space (rearrange pane)

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -24,6 +24,9 @@ bind -n C-M-Down  resize-pane -D 1
 unbind C-b
 set -g prefix C-space
 
+# Unbind prefix-space to rearrange pane
+unbind Space
+
 # Use prefix | - to split
 unbind %
 unbind '"'
