--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -64,6 +64,7 @@ set -g @plugin 'omerxx/tmux-sessionx'
 set -g status-style fg=black,bg=default
 # Set the right status to be the session name
 # with cyan bg and green bg if the prefix is active
+set -g status-left ""
 set -g status-right "#{?client_prefix,#[bg=green],#[bg=cyan]}#[fg=black] #{session_name} "
 # Set the fg to be white for the current window
 set -g window-status-current-style fg=brightgreen
