--- a/dot_config/mpv/script-opts/uosc.conf
+++ b/dot_config/mpv/script-opts/uosc.conf
@@ -35,7 +35,7 @@ top_bar_persistency=audio
 #
 # For me it nice to have them always shown regardless if
 # they only have one audio stream.
-controls=menu,gap,subtitles,audio,<has_many_video>video,<has_many_edition>editions,<stream>stream-quality,gap,space,shuffle,loop-playlist,loop-file,gap,prev,items,next,gap,fullscreen
+controls=menu,gap,subtitles,audio,<has_many_video>video,<has_many_edition>editions,gap,space,shuffle,loop-playlist,loop-file,gap,prev,items,next,gap,fullscreen
 
 # When deleting file using the uosc menu (which I removed it,
 # see input.conf. But just in case) it will go to trash instead
