feat(mpv): set max volume to 150

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -20,6 +20,10 @@ gpu-context=waylandvk
 # Deband
 deband=no
 
+## Audio
+# Set max volume to 150
+volume-max=150
+
 ## Behaviour
 # Use precise seek whenever possible
 hr-seek=yes
