feat(yt-dlp): remux and merge into mkv by default

--- a/dot_config/yt-dlp.conf
+++ b/dot_config/yt-dlp.conf
@@ -17,7 +17,7 @@
 --downloader aria2c --downloader-args aria2c:'-c -x6'
 
 # Video alias
---alias video "-S res,vcodec:h264,acodec:aac --recode mp4"
+--alias video "-S res,vcodec:h264,acodec:aac --merge-output-format mkv --remux-video mkv"
 --alias video1080p "-S res:1080,vcodec:h264,acodec:aac"
 --alias video720p "-S res:720,vcodec:h264,acodec:aac"
 
