feat: change my `~/videos` to `~/media`

--- a/dot_config/mpv/script-opts/videoclip.conf
+++ b/dot_config/mpv/script-opts/videoclip.conf
@@ -10,6 +10,6 @@ audio_format=opus
 audio_bitrate=256k
 
 # filename template
-video_folder_path=~/videos/clip
+video_folder_path=~/media/clip
 filename_template=clip_%Y%M%D_%H%N%S
 
