--- a/dot_config/yt-dlp.conf
+++ b/dot_config/yt-dlp.conf
@@ -1,6 +1,6 @@
-# Save all downloaded videos into `~/videos/yt-dlp` directory
+# Save all downloaded videos into `yt-dlp` directory on your videos dir
 # and stored it to it's own directory if we're downloading a playlist
--o "~/videos/yt-dlp/%(playlist|)s/%(playlist_index&{} - |)s%(title)s [%(id)s].%(ext)s"
+-o "$XDG_VIDEOS_DIR/yt-dlp/%(playlist|)s/%(playlist_index&{} - |)s%(title)s [%(id)s].%(ext)s"
 
 # Embed metadata to the video
 --sub-langs="en.*,id,ja"
