refactor!: also change my pictures dir into media

--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -81,7 +81,7 @@ screenshot-format=png
 # I also make sure to "tag" (user.xdg.tags) it as `mpv`
 # for the screenshot file so that it's somewhat organized,
 # see scripts/screenshot.lua
-screenshot-directory="~/pictures/screenshots"
+screenshot-directory="~/media/screenshots"
 screenshot-template="Screenshot_%tY%tm%td_%tH%tM%tS"
 
 ## General
