--- a/dot_config/fastfetch/config.jsonc
+++ b/dot_config/fastfetch/config.jsonc
@@ -2,7 +2,7 @@
   // JSON Schema
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/pictures/pfp.jpg",
+    "source": "~/media/pfp.png",
     "type": "kitty-icat",
     // "color": {
     //   "6": "cyan",
