feat(starship): change chezmoi read only style for directory
Change to a padlock nerdfont instead of emoji from unicode, and give a
space between it

--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -15,3 +15,7 @@ symbol = " "
 style = "bold red"
 format = "[$status]($style)"
 disabled = false
+
+[directory]
+format = "[$path]($style) [$read_only]($read_only_style)"
+read_only = ""
