feat(nvim,blink): disable ghost text

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -14,7 +14,7 @@ bind -n M-L next-window
 bind -n M-S-Left swap-window -t -1\; select-window -t -1
 bind -n M-S-Right swap-window -t +1\; select-window -t +1
 
-# Ctrl arrow key to resize pane
+# Ctrl alt arrow key to resize pane
 bind -n C-M-Left  resize-pane -L 1
 bind -n C-M-Right resize-pane -R 1
 bind -n C-M-Up    resize-pane -U 1
